// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 0.9em;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 0;
  margin-top: 0;
  margin-bottom: 15px;
  padding: 0;
  visibility: hidden;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with show and type="alert-danger" props 1`] = `
.c0 {
  color: #DC0A0A;
  font-size: 0.9em;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 0;
  margin-top: 0;
  margin-bottom: 15px;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  type="alert-danger"
>
  error message
</div>
`;

exports[`renders correctly with show and type="alert-success" props 1`] = `
.c0 {
  color: #399E5A;
  font-size: 0.9em;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 0;
  margin-top: 0;
  margin-bottom: 15px;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  type="alert-success"
>
  error message
</div>
`;

exports[`renders correctly with show and type="hint" props 1`] = `
.c0 {
  color: #621F95;
  font-size: 0.9em;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 0;
  margin-top: 0;
  margin-bottom: 15px;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  type="hint"
>
  error message
</div>
`;

exports[`renders correctly with show prop 1`] = `
.c0 {
  color: #070707;
  font-size: 0.9em;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 0;
  margin-top: 0;
  margin-bottom: 15px;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
>
  message
</div>
`;
